<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".activities.SplashActivity">

    <ImageView
        android:src="@drawable/logo"
        android:id="@+id/splash_title"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:fontFamily="@font/monoton"
        android:text="@string/splash_xml_title"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/splash_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:fontFamily="@font/vazir"
        android:text="@string/splash_xml_user"
        app:layout_constraintBottom_toTopOf="@id/splash_cafe"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/splash_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/splash_cafe"
        android:layout_width="0dp"
        android:padding="12dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vazir"
        android:text="@string/splash_xml_cafe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/splash_user" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />
    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.85" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>